--- a/TODO
+++ b/TODO
@@ -1,10 +1,9 @@
-Error Messages
-Live Demo
-Maintain editor state across open files
-Gist Lists
 Github Auth Status
+Maintain editor state across open files
+Live Update Demo
+Run Demo In Iframe
+Gist Lists
 Gist Metadata
-Load Other Gists
 Tests
 Delete Files
 Persist state across demo reloads
