--- a/TODO
+++ b/TODO
@@ -5,6 +5,8 @@ Display Demo Runtime Errors in console
 Run Demo In Iframe
 Persist state across demo reloads
 
+Save Status and error indication
+
 Gist Lists
 Gist Metadata
 Tests
