--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 TODO
 ----
+Activate Editor cursor when switching files
 Live Update Demo
 Display Demo Runtime Errors in console
 Run Demo In Iframe
