--- a/TODO
+++ b/TODO
@@ -19,3 +19,4 @@ DONE
 ----
 Maintain editor state across open files
 Error Log styles
+Tell ace not to use worker becaues it fails to load in iframe
