--- a/TODO
+++ b/TODO
@@ -3,6 +3,8 @@ TODO
 Load from actual git repos
 - Use a library to handle git api?
 
+Deploy a packaged app to gh-pages
+
 Live Update Demo
 - Display Demo Runtime Errors in console
 
