--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 TODO
 ----
 Save changes back to real git repos
-- Debug github.js posting blobs step
+- Implement gh save repo content
 
 Make errors like notices
 
