Updated in browser at strd6.github.io/editor

--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 TODO
 ----
-Yolo
+First auth doesn't display in bar
+Auth redirects to /tempest rather than /editor
 
 Live Update Demo
 - Display Demo Runtime Errors in console
