Updated in browser at strd6.github.io/editor

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 TODO
 ----
+Don't pass directories to filetree
+
 First auth doesn't display in bar
 Auth redirects to /tempest rather than /editor
 
