Updated in browser at strd6.github.io/editor

--- a/TODO
+++ b/TODO
@@ -20,6 +20,8 @@ File icons
 
 Tests
 
+Gistquire promises refactor
+
 First auth doesn't display in bar
 
 Cache Git trees and files in some form of local storage
