Updated in browser at strd6.github.io/editor

--- a/TODO
+++ b/TODO
@@ -4,6 +4,10 @@ Integrate with Github Issues
 
 Display Diffs
 
+Literate Code
+
+Generate Docs
+
 Live Update Demo
 - Display Demo Runtime Errors in console
 
