--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@ TODO
 ----
 Integrate with Github Issues
 - Select active issue
+- Display issue text in console
 - Auto-create branch for issue
 - Include issue number in commits
 - Commit/deploy to branch for issue
