Updated in browser at strd6.github.io/editor

--- a/TODO
+++ b/TODO
@@ -18,6 +18,11 @@ Persist state across demo reloads
 Organize File tree by type
 File icons
 
+.haml and .styl file type support
+- Build our own ace cdn
+
+Tests
+
 Display Diffs
 
 First auth doesn't display in bar
