--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@ TODO
 Bundled Dependencies
 - Build bundled dependencies into published script
 - Dependency source should not be in revision control
-- Should dependency build files appear in publish metadata?
+- requires and module.exports
 - One day we'll need to implement a bundleresque system, but not today
 
 Live Update Demo
